fix: panel.js cross button, image alignment

--- a/src/sass_files/components/_panel.scss
+++ b/src/sass_files/components/_panel.scss
@@ -4,6 +4,7 @@
   top: -10%;
   height: 120%;
   width: 60%;
+  overflow-y: auto;
   background-color: white;
   z-index: 1000;
   box-shadow: 0 1rem 1rem rgba($color: #000000, $alpha: 0.5);
@@ -19,6 +20,18 @@
     font-size: 20px;
     color: grey;
     cursor: pointer;
+
+    &:hover {
+      color: black;
+    }
+  }
+
+  &__cross-btn {
+    text-align: end;
+    font-size: 30px;
+    color: grey;
+    cursor: pointer;
+
 
     &:hover {
       color: black;
